# mate-layouts

./: README.md  meson.build  setup.py
.github/workflows/: python-app.yml
data/: PKGBUILD  org.github.FreaxMATE.mate-layouts.appdata.xml  org.github.FreaxMATE.mate-layouts.desktop  org.github.FreaxMATE.mate-layouts.gschema.xml  org.github.FreaxMATE.mate-layouts.policy  org.github.FreaxMATE.mate-layouts.ui
src/: change-color  mate-layouts  mate-layouts-helper
